Tela de crackingcode exibir mic quando iniciar cracking code

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY=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
+; OPENAI_API_KEY=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
 PINECONE_API_KEY=2436a874-70b3-4c51-9395-6b3f85b82db1
 TEMPLATE_DIR=/home/ubuntu22/
 INDEX_NAME=churchill-speech
