--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ asgiref==3.8.1
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.2.0
+bcrypt==4.1.3
 blinker==1.8.1
 cachelib==0.9.0
 certifi==2024.2.2
@@ -20,15 +21,21 @@ dash-table==5.0.0
 dataclasses-json==0.6.5
 decorator==5.1.1
 distro==1.9.0
+dnspython==2.6.1
 elevenlabs==0.2.27
+email_validator==2.1.1
 exceptiongroup==1.2.1
 executing==2.0.1
 fastapi==0.110.3
 Flask==3.0.3
+Flask-Bcrypt==1.0.1
 Flask-Caching==2.3.0
 Flask-Cors==4.0.0
+Flask-Login==0.6.3
 Flask-Session==0.8.0
+Flask-SQLAlchemy==3.1.1
 flask-talisman==1.1.0
+Flask-WTF==1.2.1
 frozenlist==1.4.1
 greenlet==3.0.3
 gunicorn==22.0.0
@@ -71,6 +78,7 @@ pexpect==4.9.0
 plotly==5.22.0
 priority==2.0.0
 prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 PyAudio==0.2.14
@@ -113,5 +121,6 @@ wcwidth==0.2.13
 websockets==12.0
 Werkzeug==3.0.2
 wsproto==1.2.0
+WTForms==3.1.2
 yarl==1.9.4
 zipp==3.19.0
